// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/MarkdownImage should match snapshot 1`] = `
<div>
  <div
    class="image-loading__container markdown-inline-img markdown-inline-img--loading"
    style="width: 1041px; height: 90px; min-width: 50px; min-height: 50px;"
  >
    <svg
      style="max-height: 90px; max-width: 1041px; vertical-align: middle;"
      viewBox="0 0 1041 90"
      xmlns="http://www.w3.org/2000/svg"
    />
  </div>
  <div
    class="file-preview__button"
    style="display: none;"
  >
    <figure
      class="image-loaded-container"
    >
      <img
        alt="test image"
        aria-label="file thumbnail"
        class="markdown-inline-img markdown-inline-img--loading"
        height=""
        src="/images/logo.png"
        tabindex="0"
        title="test title"
        width=""
      />
    </figure>
  </div>
</div>
`;

exports[`components/MarkdownImage should match snapshot for SizeAwareImage dimensions 1`] = `
<div>
  <div
    class="file-preview__button"
    style="display: flex;"
  >
    <figure
      class="image-loaded-container"
    >
      <img
        alt="test image"
        aria-label="file thumbnail"
        class="markdown-inline-img markdown-inline-img--hover markdown-inline-img--no-border"
        height=""
        src="path/image"
        tabindex="0"
        title="test title"
        width=""
      />
    </figure>
  </div>
</div>
`;

exports[`components/MarkdownImage should match snapshot for broken link 1`] = `
<div>
  <div
    class="image-loading__container markdown-inline-img markdown-inline-img--loading"
    style="width: 10px; height: 10px; min-width: 50px; min-height: 50px;"
  >
    <svg
      style="max-height: 10px; max-width: 10px; vertical-align: middle;"
      viewBox="0 0 10 10"
      xmlns="http://www.w3.org/2000/svg"
    />
  </div>
  <div
    class="file-preview__button"
    style="display: none;"
  >
    <figure
      class="image-loaded-container"
    >
      <img
        alt="test image"
        aria-label="file thumbnail"
        class="markdown-inline-img markdown-inline-img--loading"
        height=""
        src="brokenLink"
        tabindex="0"
        title="test title"
        width=""
      />
    </figure>
  </div>
</div>
`;

exports[`components/MarkdownImage should provide image src as an alt text for MarkdownImageExpand if image has no own alt text 1`] = `
<div>
  <div
    class="markdown-image-expand markdown-image-expand--expanded"
  >
    <button
      class="markdown-image-expand__collapse-button"
      type="button"
    >
      <span
        class="icon icon-menu-down"
      />
    </button>
    <div
      class="file-preview__button"
      style="display: flex;"
    >
      <figure
        class="image-loaded-container"
      >
        <img
          alt=""
          aria-label="file thumbnail"
          class="markdown-inline-img markdown-inline-img--hover cursor--pointer a11y--active"
          height="250"
          src="https://example.com/image.png"
          tabindex="0"
          title="test title"
          width="50"
        />
      </figure>
    </div>
  </div>
</div>
`;

exports[`components/MarkdownImage should render a link if the source is unsafe 1`] = `
<div>
  <div
    style="display: inline-block;"
  >
    <img
      alt="test image"
      class="markdown-inline-img broken-image"
      src=""
    />
  </div>
</div>
`;

exports[`components/MarkdownImage should render an image with no preview if the source is safe and the image is a link 1`] = `
<div>
  <div
    class="file-preview__button"
    style="display: flex;"
  >
    <figure
      class="image-loaded-container"
    >
      <img
        alt="test image"
        aria-label="file thumbnail"
        class="markdown-inline-img markdown-inline-img--hover markdown-inline-img--no-border"
        height=""
        src="https://example.com/image.png"
        tabindex="0"
        title="test title"
        width=""
      />
    </figure>
  </div>
</div>
`;

exports[`components/MarkdownImage should render an image with preview modal if the source is safe 1`] = `
<div>
  <div
    class="file-preview__button"
    style="display: flex;"
  >
    <figure
      class="image-loaded-container"
    >
      <img
        alt="test image"
        aria-label="file thumbnail"
        class="markdown-inline-img markdown-inline-img--hover cursor--pointer a11y--active"
        height=""
        src="https://example.com/image.png"
        tabindex="0"
        title="test title"
        width=""
      />
    </figure>
  </div>
</div>
`;

exports[`components/MarkdownImage should render image with MarkdownImageExpand if it is taller than 100px 1`] = `
<div>
  <div
    class="markdown-image-expand markdown-image-expand--expanded"
  >
    <button
      class="markdown-image-expand__collapse-button"
      type="button"
    >
      <span
        class="icon icon-menu-down"
      />
    </button>
    <div
      class="file-preview__button"
      style="display: flex;"
    >
      <figure
        class="image-loaded-container"
      >
        <img
          alt="test image"
          aria-label="file thumbnail"
          class="markdown-inline-img markdown-inline-img--hover cursor--pointer a11y--active"
          height="250"
          src="https://example.com/image.png"
          tabindex="0"
          title="test title"
          width="50"
        />
      </figure>
    </div>
  </div>
</div>
`;
